[package]
name = "bevy_ggrs"
version = "0.13.0"
authors = ["Georg Schuppe <georg.schuppe@gmail.com>"]
edition = "2021"
description = "Bevy plugin for the GGRS P2P rollback networking library"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gschup/bevy_ggrs"
keywords = ["gamedev", "networking", "ggpo", "rollback", "bevy"]
categories = ["network-programming", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wasm-bindgen = ["instant/wasm-bindgen", "ggrs/wasm-bindgen"]

[dependencies]
bevy = { version = "0.11", default-features = false}
bytemuck = { version = "1.7", features=["derive"]}
instant = { version = "0.1", optional = true }
log = "0.4"
#ggrs = { version= "0.9.4", features=["sync-send"]}
ggrs = { git = "https://github.com/gschup/ggrs", features=["sync-send"]}

[dev-dependencies]
clap = { version = "4.4", features = ["derive"] }
rand = "0.8.4"
rand_xoshiro = "0.6"
bevy = "0.11"
serde = "1.0.130"
serde_json = "1.0"
serial_test = "2.0"

# Examples
[[example]]
name = "box_game_p2p"
path = "examples/box_game/box_game_p2p.rs"

[[example]]
name = "box_game_spectator"
path = "examples/box_game/box_game_spectator.rs"

[[example]]
name = "box_game_synctest"
path = "examples/box_game/box_game_synctest.rs"

[[example]]
name = "particles"
path = "examples/stress_tests/particles.rs"
