[package]
name = "bevy_ggrs"
version = "0.20.0"
authors = ["Georg Schuppe <georg.schuppe@gmail.com>"]
edition = "2024"
description = "Bevy plugin for the GGRS P2P rollback networking library"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/gschup/bevy_ggrs"
keywords = ["gamedev", "networking", "ggpo", "rollback", "bevy"]
categories = ["network-programming", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
wasm-bindgen = ["instant/wasm-bindgen", "ggrs/wasm-bindgen"]

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = ["bevy_log"] }
instant = { version = "0.1", optional = true }
log = "0.4"
#ggrs = { version = "0.11.1", features = ["sync-send"] }
ggrs = { git = "https://github.com/gschup/ggrs", features = ["sync-send"] }
seahash = "4.1"
disqualified = "1.0.0"
serde = { version = "1", default-features = false }

[dev-dependencies]
bevy = { version = "0.18", default-features = true }
clap = { version = "4.4", features = ["derive"] }
rand = "0.9"
rand_xoshiro = "0.7"
serde = "1.0.196"
serde_json = "1.0"
serial_test = "2.0"
criterion = "0.5"

# Examples
[[example]]
name = "box_game_p2p"
path = "examples/box_game/box_game_p2p.rs"

[[example]]
name = "box_game_spectator"
path = "examples/box_game/box_game_spectator.rs"

[[example]]
name = "box_game_synctest"
path = "examples/box_game/box_game_synctest.rs"

[[example]]
name = "particles"
path = "examples/stress_tests/particles.rs"

[[bench]]
name = "bench"
harness = false
